<resources>
    <string name="app_name">Fitness Care</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="application_name">Fitness Care</string>

    <string name="facebook_app_id">473063763910281</string>
    <string name="fb_login_protocol_scheme">fb473063763910281</string>


    <!-- Strings for Tutorial Screen -->

    <!-- Titles -->
    <string name="first_slide_title">Tăng cường sức khoẻ </string>
    <string name="second_slide_title">Năng động mỗi ngày </string>
    <string name="third_slide_title">Vì một tương lai tốt đẹp </string>
    <string name="fourth_slide_title">Tham gia cùng chúng tôi </string>


    <string name="channel_name">Channel 1</string>
    <string name="channel_description">Channel 1</string>


    <!-- Descriptions -->
    <string name="first_slide_desc">Tôi tin rằng món quà lớn nhất mà bạn có thể trao cho gia đình mình và thế giới là chính mình khỏe khoắn </string>
    <string name="second_slide_desc">Chăm sóc sức khỏe ngày hôm nay cho tôi hy vọng tươi sáng hơn vào ngày mai. </string>
    <string name="third_slide_desc">Những người nghĩ rằng họ không có thời gian để tập thể dục thì sớm muộn gì, họ cũng phải dành thời gian cho bệnh tật </string>
    <string name="fourth_slide_desc">Tham gia cùng chúng tôi </string>

    <!-- Searching Tab -->

    <string-array name="type_muscle_array">
        <item>Cơ Ngực</item>
        <item>Cơ Lưng</item>
        <item>Cơ Bụng</item>
        <item>Cơ Tay</item>
        <item>Cơ Đùi</item>
        <item>Cơ Mông</item>
    </string-array>

    <!-- Button -->
    <string name="btnSkip">Skip</string>
    <string name="btnNext">Next</string>
    <string name="btnGetStarted">Lets Get Started</string>

    <!-- Muscle Groups  -->
    <string name="Chest">Ngực</string>
    <string name="Back">Lưng</string>
    <string name="Arms">Tay</string>
    <string name="Legs">Chân</string>
    <string name="But">Mông</string>

    <!-- TODO: Strings for Welcome Startup Screen -->

    <!-- General String -->
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="create_account">Create \nAccount</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="password_update">Cập nhật mật khẩu</string>
    <string name="password_update_success">Cập nhật mật khẩu thành công</string>
    <string name="how_we_work">Tìm hiểu thêm?</string>
    <string name="welcome_header">Fitness Care</string>
    <string name="welcome_tag_line">Cải thiện cuộc sống của bạn mỗi ngày.</string>

    <!-- OTP Screen -->
    <string name="otp_code">Code</string>
    <string name="otp_verification">Xác thực</string>
    <string name="otp_description">Nhập mã số bạn vừa nhận được</string>

    <!-- Forget Password Screen -->
    <string name="forget_password_detail">Input Your Phone Number</string>


    <!-- Selection Screen -->
    <string name="selection">Select Your Method</string>
    <string name="selection_detail">Bạn hãy lựa chọn phương thức để lấy lại mật khẩu.</string>
    <string name="selection_mobile">Sử dụng số điện thoại:</string>
    <string name="selection_email">Sử dụng địa chỉ email:</string>


</resources>