<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00FFFFFF"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:fadeScrollbars="true"
        android:fillViewport="true"
        android:hapticFeedbackEnabled="true"
        android:isScrollContainer="true"
        android:keepScreenOn="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <Button
                android:id="@+id/btnChest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_blue"
                android:text="@string/Chest" />

            <Button
                android:id="@+id/btnArms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_blue"
                android:text="@string/Arms" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_blue"
                android:text="@string/Back" />

            <Button
                android:id="@+id/btnLegs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_blue"
                android:text="@string/Legs" />

            <Button
                android:id="@+id/btnBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_blue"
                android:text="@string/But" />

            <Button
                android:id="@+id/btnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_blue"
                android:text="KHÁC" />

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


    <ImageView
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/ic_add" />

</LinearLayout>