<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".Login.ForgetPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backActivity"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/bungee"
                    android:gravity="center"
                    android:text="@string/selection"
                    android:textColor="@color/white"
                    android:textSize="36sp" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/desc_selection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:lineSpacingExtra="5dp"
                        android:fontFamily="@font/bungee"
                        android:text="@string/selection_detail"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/corner_trans"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/mobile_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_mobile" />

                        <TextView
                            android:id="@+id/mobile_tile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="35dp"
                            android:layout_toRightOf="@id/mobile_icon"
                            android:fontFamily="@font/brandon_grotesque_black"
                            android:text="@string/selection_mobile"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/mobile_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/mobile_tile"
                            android:layout_toRightOf="@id/mobile_icon"
                            android:fontFamily="@font/brandon_grotesque_black"
                            android:text="+84xxxxxxxxx"
                            android:textColor="@color/black"
                            android:textSize="25dp" />

                        <Button
                            android:id="@+id/btn_colection_phone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relativeLayout_mail"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/corner_trans"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/email_icon"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/ic_mail_res" />

                        <TextView
                            android:id="@+id/email_tile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="35dp"
                            android:layout_toRightOf="@id/email_icon"
                            android:fontFamily="@font/brandon_grotesque_black"
                            android:text="@string/selection_email"
                            android:textSize="23sp" />

                        <TextView
                            android:id="@+id/email_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/email_tile"
                            android:layout_toRightOf="@id/email_icon"
                            android:fontFamily="@font/brandon_grotesque_black"
                            android:text="support@gmail.com"
                            android:textColor="@color/black"
                            android:textSize="25dp" />

                        <Button
                            android:id="@+id/btn_colection_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent" />


                    </RelativeLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>