<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".Login.ForgetPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backActivity"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/bungee"
                    android:gravity="center"
                    android:text="@string/forget_password"
                    android:textColor="@color/white"
                    android:textSize="52sp" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">



                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_forgot_password" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/bungee"
                        android:gravity="center"
                        android:text="@string/forget_password_detail"
                        android:textAlignment="center"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.hbb20.CountryCodePicker
                            app:ccpDialog_searchEditTextTint="@color/colorPrimary"
                            android:id="@+id/phone_number_forget"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ccp_autoDetectCountry="true"
                            app:ccp_showFlag="true"
                            app:ccp_showNameCode="true"
                            app:ccp_showFullName="true"
                            app:ccp_autoDetectLanguage="true"
                            android:background="@drawable/black_border"
                            android:padding="5dp"/>

                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPhoneForget"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="Phone Number"
                        android:textColorHint="@color/black"
                        app:boxBackgroundColor="#E4E4E4"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:startIconDrawable="@drawable/ic_phone_res"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="phone"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnFoget_password_next"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:onClick="forgetNext"
                        android:text="@string/btnNext" />






                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>